Ajout d'élément de configuration: - Possibilité de désactiver certains modules directement dans le fichier de config - Possibilité de désactiver l'enregistrement des informations IMU ou GPS sous redis

--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,11 @@
+[system_module_enabled]
+diagnostic=true
+imu=true
+link=true
 [link_earth_station]
-type = socket
-ip_server = 192.168.1.39
+type=socket
+ip_server=192.168.1.39
+[imu]	
+flight_data_recorder=true
+[gps]
+flight_data_recorder=true
