Modification de la valeur par défaut de la liaison sol : Serial

--- a/config.ini
+++ b/config.ini
@@ -3,8 +3,9 @@ diagnostic=true
 imu=true
 link=true
 [link_earth_station]
-type=socket
-ip_server=192.168.1.39
+type=serial
+ip_server=192.168.xxx.xxx
+PORT=1977
 [imu]	
 flight_data_recorder=true
 [gps]
